--- a/views/blog/posts.ejs
+++ b/views/blog/posts.ejs
@@ -9,8 +9,7 @@ if(posts.length > 0) { %>
           style="max-height: 200px;"
           class="card-img-top"
           alt="Card image cap"
-          src="<%= post.imageUrl ? post.imageUrl : 'https://www.hopkinsmedicine.org/-/media/feature/noimageavailable.ashx' %>"
-        />
+         src="/<%=post.imageUrl %>"/>
         <div class="card-body">
           <h5 class="card-title"><%= post.title %></h5>
           <div class="d-flex justify-content-between align-items-center">
